合并策略代码提交

--- a/examples/index.html
+++ b/examples/index.html
@@ -13,6 +13,7 @@
       <li><a href="error">Error</a></li>
       <li><a href="extend">Extend</a></li>
       <li><a href="Interceptor">Interceptor</a></li>
+      <li><a href="Config">Config</a></li>
     </ul>
   </body>
 </html>
