取消功能实现

--- a/examples/index.html
+++ b/examples/index.html
@@ -14,6 +14,7 @@
       <li><a href="extend">Extend</a></li>
       <li><a href="Interceptor">Interceptor</a></li>
       <li><a href="Config">Config</a></li>
+      <li><a href="Cancel">Cancel</a></li>
     </ul>
   </body>
 </html>
