--- a/examples/index.html
+++ b/examples/index.html
@@ -15,6 +15,7 @@
       <li><a href="Interceptor">Interceptor</a></li>
       <li><a href="Config">Config</a></li>
       <li><a href="Cancel">Cancel</a></li>
+      <li><a href="More">More</a></li>
     </ul>
   </body>
 </html>
