--- a/examples/more/index.html
+++ b/examples/more/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>More example</title>
-  </head>
-  <body>
-    <script src="/__build__/more.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>More example</title>
+  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+</head>
+</head>
+
+<body>
+  <h1> file download</h1>
+  <div>
+    <button id="download" clss="btn btn-primary">Download</button>
+  </div>
+  <h1>file upload</h1>
+  <form action="" role="form" class="form" onsubmit="return false;">
+    <input type="file" id="file" class="form-control">
+    <button id="upload" type="button" class="btn btn-primary">upload</button>
+  </form>
+  <script src="/__build__/more.js"></script>
+</body>
+
 </html>
